--- a/util-testing-cassandra/src/main/resources/embedded-cassandra.yaml
+++ b/util-testing-cassandra/src/main/resources/embedded-cassandra.yaml
@@ -27,13 +27,13 @@ hinted_handoff_enabled: true
 # generated.  After it has been dead this long, hints will be dropped.
 max_hint_window_in_ms: 3600000 # one hour
 # Sleep this long after delivering each hint
-hinted_handoff_throttle_delay_in_ms: 1
+# hinted_handoff_throttle_delay_in_ms: 1
 
 # authentication backend, implementing IAuthenticator; used to identify users
 authenticator: org.apache.cassandra.auth.AllowAllAuthenticator
 
 # authorization backend, implementing IAuthority; used to limit access/provide permissions
-authority: org.apache.cassandra.auth.AllowAllAuthority
+# authority: org.apache.cassandra.auth.AllowAllAuthority
 
 # The partitioner is responsible for distributing rows (by key) across
 # nodes in the cluster.  Any IPartitioner may be used, including your
@@ -130,7 +130,7 @@ row_cache_save_period: 0
 # that implements org.apache.cassandra.cache.IRowCacheProvider.
 #
 # Defaults to SerializingCacheProvider
-row_cache_provider: SerializingCacheProvider
+# row_cache_provider: SerializingCacheProvider
 
 # saved caches
 saved_caches_directory: /var/lib/cassandra/saved_caches
@@ -174,7 +174,7 @@ seed_provider:
 # it is most effective under light to moderate load, or read-heavy
 # workloads; under truly massive write load, it will often be too
 # little, too late.
-flush_largest_memtables_at: 0.75
+# flush_largest_memtables_at: 0.75
 
 # emergency pressure valve #2: the first time heap usage after a full
 # (CMS) garbage collection is above this fraction of the max,
@@ -185,8 +185,8 @@ flush_largest_memtables_at: 0.75
 # 
 # Set to 1.0 to disable.  Setting this lower than
 # CMSInitiatingOccupancyFraction is not likely to be useful.
-reduce_cache_sizes_at: 0.85
-reduce_cache_capacity_to: 0.6
+# reduce_cache_sizes_at: 0.85
+# reduce_cache_capacity_to: 0.6
 
 # For workloads with more data than can fit in memory, Cassandra's
 # bottleneck will be reads that need to fetch data from
@@ -225,7 +225,7 @@ memtable_flush_queue_size: 4
 
 # Buffer size to use when performing contiguous column slices. 
 # Increase this to the size of the column slices you typically perform
-sliced_buffer_size_in_kb: 64
+# sliced_buffer_size_in_kb: 64
 
 # TCP port, for commands and data
 storage_port: 7000
@@ -379,7 +379,7 @@ compaction_preheat_key_cache: true
 # stream_throughput_outbound_megabits_per_sec: 400
 
 # Time to wait for a reply from other nodes before failing the command 
-rpc_timeout_in_ms: 10000
+# rpc_timeout_in_ms: 10000
 
 # phi value that must be reached for a host to be marked down.
 # most users should never need to adjust this.
