Testing parsers and adding more docs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ scala:
 
 # Emails to notify
 notifications:
-  slack: newzly:nfmIGqhmrfJb6pIH6I50mnCO
+  slack:
+    - newzly:nfmIGqhmrfJb6pIH6I50mnCO
+    - websudos:P9QNXx1ZGFnDHp3v3jUqtB8k
   email:
-    - dev@newzly.com
+    - dev@websudos.co.uk
 
 # Branches to build.
 branches:
