Removing the core module.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ cache:
 
 before_script: travis_retry sbt ++$TRAVIS_SCALA_VERSION update
 
-script:
-  - sbt ++$TRAVIS_SCALA_VERSION clean coverage test coverageReport coverageAggregate coveralls
+script: ./build/run_tests.sh
 
 after_success:
   - ./build/publish_develop.sh
