--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,17 @@ jdk:
 - oraclejdk7
 - openjdk7
 - oraclejdk8
+
 branches:
   only:
   - master
   - develop
+
+matrix:
+  include:
+  - scala: 2.12.0
+    jdk: oraclejdk8
+
 env:
   global:
   - GH_REF: github.com/outworkers/util.git
@@ -23,12 +30,23 @@ env:
   - secure: k/DGy5KkvzmQNJEfazsEoD6biwkIoYC9DyjhDTMCxhXLz/mURsCtfhdWo3Uz4nhuX3qDK0N/6C6BTwl0ktVEA7eH8XZQY/dW1lLTY3jglD2U/FhAfCngbcI+ToL5kdK77Zy4LKvu4XBKXfSusI20E1gbK+Tjp1uCkNvVaAyyVv0=
   - secure: Mq2DExZRRQBvLwcw8O+tNTbT7M0NzWEGid30PnlAKtXQlupAo45VBoSb7fEY9zWqLaH7fJEQ/AauirgLdPPwqhVT1qx91ioSZ3+ikzSdkZu5LbfM89C1rnvpjpWY3uiCwtAYql2yIu3lhWncpIXl2rBhwSHi6DUTnRUnjzd/yws=
   - secure: KJca+iYGyO9svC+V1UF5y7Ff9OtS83CRY6VHZ0cKtBi6xID68J9BE/70TyDgNM6eLdweVw3Qw2tVUJdlFlkq9x4swOJqZkG7CodO9+NsHcYvlOWVNEXJ8ETu6vli5BY3w4UJlebjszUjOmC4cW7h5Y+omW0NHT6RrYbxVmvkQgs=
+
 cache:
   directories:
-  - "$HOME/.ivy2/cache"
-before_script: travis_retry sbt ++$TRAVIS_SCALA_VERSION update
+  - $HOME/.sbt/0.13/dependency
+  - $HOME/.sbt/boot/scala*
+  - $HOME/.sbt/launchers
+  - $HOME/.ivy2/cache
+  - $HOME/.nvm
+
+before_cache:
+  - du -h -d 1 $HOME/.ivy2/cache
+  - du -h -d 2 $HOME/.sbt/
+  - find $HOME/.sbt -name "*.lock" -type f -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
+
+
+before_script: travis_retry sbt "plz $TRAVIS_SCALA_VERSION update"
 script: "./build/run_tests.sh"
 after_success:
 - "./build/publish_develop.sh"
-before_install:
-- openssl aes-256-cbc -K $encrypted_d543e1d8b539_key -iv $encrypted_d543e1d8b539_iv -in build/deploy.asc.enc -out build/deploy.asc -d
