--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,14 @@ jdk:
 - oraclejdk7
 - openjdk7
 - oraclejdk8
-
 branches:
   only:
   - master
   - develop
-
 matrix:
   include:
   - scala: 2.12.0
     jdk: oraclejdk8
-
 env:
   global:
   - GH_REF: github.com/outworkers/util.git
@@ -30,7 +27,8 @@ env:
   - secure: k/DGy5KkvzmQNJEfazsEoD6biwkIoYC9DyjhDTMCxhXLz/mURsCtfhdWo3Uz4nhuX3qDK0N/6C6BTwl0ktVEA7eH8XZQY/dW1lLTY3jglD2U/FhAfCngbcI+ToL5kdK77Zy4LKvu4XBKXfSusI20E1gbK+Tjp1uCkNvVaAyyVv0=
   - secure: Mq2DExZRRQBvLwcw8O+tNTbT7M0NzWEGid30PnlAKtXQlupAo45VBoSb7fEY9zWqLaH7fJEQ/AauirgLdPPwqhVT1qx91ioSZ3+ikzSdkZu5LbfM89C1rnvpjpWY3uiCwtAYql2yIu3lhWncpIXl2rBhwSHi6DUTnRUnjzd/yws=
   - secure: KJca+iYGyO9svC+V1UF5y7Ff9OtS83CRY6VHZ0cKtBi6xID68J9BE/70TyDgNM6eLdweVw3Qw2tVUJdlFlkq9x4swOJqZkG7CodO9+NsHcYvlOWVNEXJ8ETu6vli5BY3w4UJlebjszUjOmC4cW7h5Y+omW0NHT6RrYbxVmvkQgs=
-
+  - secure: McqtU8mq/QFlG2s2lfeKyNbCPU1IPGNF4FQFyYsWU94TMhUh7KGBDQFvdxxabDngwPWuMKvA59PFCqzbvmJr9qug4pYEAJaAAkfCQVUhU6fczdrH1k9mAdERIBvB1T6zWXCpIW1NTWkpq8Ew2aLGTpCJ4KShjGS0uzDgRyXjC+Y=
+  - secure: lPvdpbnKHSdkeIfh5pT2e3H3uR6kh11Wlf1YWgbvkC3eZrWeRmwKGFwMrPKP1gu7Y4+I563a0vR2Zgli+xGCibS6JY/NHUx3B8j8CzvsMfSEoG6vOpNE2uCM3EbugJRGMausjQkqIH6gmqQaHLgTVtj2JnkqWOM25EVvgqL7Ew8=
 cache:
   directories:
   - $HOME/.sbt/0.13/dependency
@@ -38,15 +36,12 @@ cache:
   - $HOME/.sbt/launchers
   - $HOME/.ivy2/cache
   - $HOME/.nvm
-
 before_cache:
-  - du -h -d 1 $HOME/.ivy2/cache
-  - du -h -d 2 $HOME/.sbt/
-  - find $HOME/.sbt -name "*.lock" -type f -delete
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
-
-
+- du -h -d 1 $HOME/.ivy2/cache
+- du -h -d 2 $HOME/.sbt/
+- find $HOME/.sbt -name "*.lock" -type f -delete
+- find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
 before_script: travis_retry sbt "plz $TRAVIS_SCALA_VERSION update"
-script: "./build/run_tests.sh"
+script: ./build/run_tests.sh
 after_success:
-- "./build/publish_develop.sh"
+- ./build/publish_develop.sh
