--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_cache:
 - du -h -d 2 $HOME/.sbt/
 - find $HOME/.sbt -name "*.lock" -type f -delete
 - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
-before_script: travis_retry sbt "plz $TRAVIS_SCALA_VERSION update"
+before_script: travis_retry sbt "++ $TRAVIS_SCALA_VERSION update"
 script: ./build/run_tests.sh
 after_success:
 - ./build/publish_develop.sh
