--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: scala
 scala:
-- 2.10.6
 - 2.11.12
+- 2.13.1
 sudo: false
 notifications:
   slack:
@@ -9,7 +9,7 @@ notifications:
   email:
   - dev@websudos.co.uk
 jdk:
-- oraclejdk8
+- oraclejdk9
 branches:
   only:
   - master
@@ -17,7 +17,7 @@ branches:
 matrix:
   include:
   - scala: 2.12.8
-    jdk: oraclejdk8
+    jdk: oraclejdk9
     env: RUN_WITH_COVERAGE=true PUBLISH_ARTIFACT=true
 
 env:
@@ -43,7 +43,7 @@ before_cache:
 - du -h -d 2 $HOME/.sbt/
 - find $HOME/.sbt -name "*.lock" -type f -delete
 - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
-before_script: travis_retry sbt "plz $TRAVIS_SCALA_VERSION update"
+before_script: travis_retry sbt "++ $TRAVIS_SCALA_VERSION update"
 script: ./build/run_tests.sh
 after_success:
 - ./build/publish_develop.sh
